--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,20 +23,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Categories"
-            android:textSize="24sp"
-            android:padding="16dp"/>
+            android:textSize="24sp"  />
 
         <GridView
             android:id="@+id/categoriesGrid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:numColumns="auto_fit"
+            android:columnWidth="150dp"
             android:verticalSpacing="16dp"
             android:horizontalSpacing="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp"
-            android:scrollbars="vertical"/>
+            android:scrollbars="horizontal|vertical"/>
 
         <TextView
             android:id="@+id/featuredTitle"
@@ -110,6 +109,7 @@
             android:text="My Profile"
             android:padding="16dp"/>
 
+
     </LinearLayout>
 
-</androidx.core.widget.NestedScrollView>
+</ScrollView>
