--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp" >
@@ -22,17 +23,18 @@
             android:id="@+id/categoriesTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#ccc"
             android:text="Categories"
             android:textSize="24sp"  />
 
-        <GridView
-            android:id="@+id/categoriesGrid"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/categoriesRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="auto_fit"
-            android:columnWidth="150dp"
-            android:verticalSpacing="16dp"
-            android:horizontalSpacing="16dp"
+            android:layout_height="250dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="16dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             android:scrollbars="horizontal|vertical"/>
 
         <TextView
@@ -40,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Featured Movies"
+            android:textColor="#ccc"
             android:textSize="24sp"
             android:padding="16dp"/>
 
@@ -53,61 +56,33 @@
 
         <TextView
             android:id="@+id/topRatedTitle"
+            android:textColor="#ccc"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Top Rated Movies"
             android:textSize="24sp"
             android:padding="16dp"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/topRatedRecyclerView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp"/>
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/recommendationsTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Recommended Movies"
-            android:textSize="24sp"
-            android:padding="16dp"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recommendationsRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/topRatedRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:scrollbars="vertical" />
 
-        <TextView
-            android:id="@+id/trailersTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Movie Trailers"
-            android:textSize="24sp"
-            android:padding="16dp"/>
+        </LinearLayout>
 
-        <GridView
-            android:id="@+id/trailersGrid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="3"
-            android:verticalSpacing="16dp"
-            android:horizontalSpacing="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp"/>
 
-        <Button
-            android:id="@+id/profileButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="My Profile"
-            android:padding="16dp"/>
 
 
     </LinearLayout>
