--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -14,6 +14,7 @@
 
     <TextView
         android:id="@+id/categoryNameTextView"
+        android:textColor="@color/teal_200"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/categoryImageView"
