--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -2,12 +2,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:textColor="@color/teal_200"
     android:padding="16dp">
 
     <ImageView
         android:id="@+id/movieImageView"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:textColor="@color/teal_200"
         android:scaleType="centerCrop"
         android:src="@drawable/default_movie_image" />
 
@@ -16,12 +18,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
+        android:textColor="@color/teal_200"
         android:paddingStart="16dp">
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="match_parent"
-            android:textColor="@color/white"
+            android:textColor="@color/teal_200"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -30,6 +33,7 @@
             android:id="@+id/descriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/teal_700"
             android:textSize="14sp" />
 
     </LinearLayout>
