--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -21,6 +21,7 @@
 
         <TextView
             android:id="@+id/titleTextView"
+            android:textColor="@color/teal_200"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -28,6 +29,7 @@
 
         <TextView
             android:id="@+id/releaseDateTextView"
+            android:textColor="@color/teal_200"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp" />
@@ -35,6 +37,7 @@
         <TextView
             android:id="@+id/synopsisTextView"
             android:layout_width="match_parent"
+            android:textColor="@color/teal_200"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:textSize="14sp" />
