--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -6,40 +6,37 @@
 
     <ImageView
         android:id="@+id/posterImageView"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:contentDescription="@string/movie_poster"
-        android:scaleType="fitCenter" />
+        android:layout_width="80dp"
+        android:layout_height="120dp"
+        android:src="@drawable/ic_launcher_background" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:layout_marginStart="16dp">
 
         <TextView
             android:id="@+id/titleTextView"
-            android:textColor="@color/teal_200"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:text="Movie Title"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/releaseDateTextView"
-            android:textColor="@color/teal_200"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp" />
+            android:text="Release Date"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/synopsisTextView"
-            android:layout_width="match_parent"
-            android:textColor="@color/teal_200"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:text="Movie Synopsis"
             android:textSize="14sp" />
 
     </LinearLayout>
