--- a/app/src/main/res/menu/movie_list_activity.xml
+++ b/app/src/main/res/menu/movie_list_activity.xml
@@ -4,5 +4,7 @@
         android:title="Sort by Title" />
     <item
         android:id="@+id/sort_by_date"
-        android:title="Sort by Rating" />
+        android:title="Sort by Date" />
+    <item android:id="@+id/sort_by_rating"
+        android:title="Sort by Rating"/>
 </menu>
