--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,41 +1,105 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    >
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/titleTextView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+        android:layout_height="48dp"
+        android:background="@color/teal_200"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/releaseDateTextView"
-        android:layout_width="match_parent"
+        <Button
+            android:id="@+id/BackBtn"
+            android:layout_width="65dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="12dp"
+            android:backgroundTint="#0003DAC5"
+            android:text="back"
+            app:icon="@android:drawable/ic_menu_revert"
+            app:iconTint="@color/black" />
+
+        <ImageView
+            android:id="@+id/Logo"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginVertical="4dp"
+            android:layout_marginLeft="230dp"
+            app:tint="@color/black"
+            app:srcCompat="@drawable/logo" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/titleTextView"
-        android:textColor="@color/teal_200"
-        android:textSize="16sp"/>
+        android:layout_margin="12dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/posterImageView"
+            android:layout_width="135dp"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/dark_knight_poster" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/titleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="The Dark Knight"
+
+                android:textSize="12pt"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/Rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="4.8/5 Stars "
+                />
+
+            <TextView
+                android:id="@+id/releaseDateTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="Release Date: 2008 "
+                />
+
+            <TextView
+                android:id="@+id/Category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="Category: Action, Superhero &amp; Thriller" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/synopsisTextView"
-        android:layout_width="match_parent"
+        android:layout_width="364dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/releaseDateTextView"
-        android:textColor="@color/teal_200"
+        android:layout_margin="12dp"
+        android:text="After Gordon, Dent and Batman begin an assault on Gotham's organised crime, the mobs hire the Joker, a psychopathic criminal mastermind who offers to kill Batman and bring the city to its knees."
+        android:textSize="9pt" />
 
-        android:textSize="16sp"/>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="300dp"
+        android:layout_height="74dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/teal_200"
+        android:text="Remind me when movie starts"
+        android:textColor="#000000" />
 
 
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/posterImageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        android:src="@drawable/die_hard_poster" />
-</RelativeLayout>
+</LinearLayout>
