--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center"
     android:padding="16dp" >
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <SearchView
-            android:id="@+id/searchView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:queryHint="Search for movies"
-            android:iconifiedByDefault="false"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+            <SearchView
+                android:id="@+id/searchView"
+                android:layout_width="308dp"
+                android:layout_height="wrap_content"
+                android:iconifiedByDefault="false"
+                android:queryHint="@string/search" />
+
+            <Button
+                android:id="@+id/langbtn"
+                android:layout_width="65dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="300dp"
+                android:backgroundTint="#00000000"
+                android:clickable="true"
+                android:text="back"
+                app:icon="@android:drawable/ic_menu_compass"
+                app:iconTint="@color/black" />
+        </RelativeLayout>
         <TextView
             android:id="@+id/categoriesTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#ccc"
-            android:text="Categories"
+            android:text="@string/categories"
             android:textSize="24sp"  />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -41,7 +58,7 @@
             android:id="@+id/featuredTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Featured Movies"
+            android:text="@string/featured_movies"
             android:textColor="#ccc"
             android:textSize="24sp"
             android:padding="16dp"/>
@@ -60,7 +77,7 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Top Rated Movies"
+            android:text="@string/top_rated_movies"
             android:textSize="24sp"
             android:padding="16dp"/>
 
