--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -100,6 +100,14 @@
         android:backgroundTint="@color/teal_200"
         android:text="Remind me when movie starts"
         android:textColor="#000000" />
+    <Button
+        android:id="@+id/open_browser_button"
+        android:layout_width="250dp"
+        android:layout_height="74dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/teal_700"
+        android:text="go to moive site"
+        android:textColor="#000000"/>
 
 
 
